Use correct qt4 dirs for FreeBSD
Prefix should not be used as it's unreliable and may have undesired
side-effects.

--- a/qucs/configure.ac
+++ b/qucs/configure.ac
@@ -149,7 +149,7 @@ case $host_os in
     paths="$QTDIR/include /usr/local/qt4/include /usr/include/qt4 /usr/include/qt4 \
       /usr/include /usr/X11R6/include/X11/qt4 /usr/X11R6/include/X11/qt4 \
       /usr/X11R6/include/qt4 /usr/X11R6/include /sw/include/qt4 \
-      /usr/X11R6/include/qt4 $prefix/include/qt4"
+      /usr/X11R6/include/qt4 /usr/local/include/qt4"
     for path in $paths; do
       if test -f "$path/Qt/qapplication.h"; then
         QT_INCLUDES="$path -I$path/Qt -I$path/QtGui -I$path/QtCore -I$path/QtSvg -I$path/QtXml"
@@ -213,7 +213,7 @@ case $host_os in
     AC_MSG_CHECKING([for Qt library])
     paths="$QTDIR/lib $QTDIR/lib64 /usr/local/qt4/lib /usr/lib/qt4 /usr/lib/qt4/Qtconf /usr/lib \
       /usr/X11R6/lib/X11/qt4 /usr/X11R6/lib/X11/qt4 /usr/X11R6/lib/qt4 \
-      /usr/X11R6/lib /sw/lib /usr/lib64/qt4 /usr/X11R6/lib/qt4 $prefix/lib/qt4"
+      /usr/X11R6/lib /sw/lib /usr/lib64/qt4 /usr/X11R6/lib/qt4 /usr/local/lib/qt4"
     AC_LANG(C++)
     for path in $paths; do
       save_LIBS="$LIBS"
